# epsilon

./: .gitignore  README.md  app.py  election.py  pyproject.toml  results.json  serve.py
static/css/: main.css
static/js/: ballot.js
templates/: ballot.html  base.html  error.html  index.html  success.html
